--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         android:paddingVertical="10dp"
         android:paddingHorizontal="5dp">
-        <androidx.constraintlayout.utils.widget.ImageFilterView
+        <ImageView
             android:id="@+id/iv_avatar"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -16,11 +16,10 @@
             app:layout_constraintWidth_percent=".5"
             app:layout_constraintDimensionRatio="w,1"
             app:layout_constraintTop_toTopOf="parent"
-            android:tint="@color/purple_500"
-            app:srcCompat="@drawable/ic_baseline_settings_24"
+            app:srcCompat="@drawable/ic_baseline_lock_24"
             app:roundPercent="1"
             android:layout_marginVertical="10dp"
-            />
+            app:tint="@color/purple_500" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
